--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: index
 ---
 
 <ul class="posts">
-  {% for post in site.posts %}
+  {% for post in site.posts limit:5 %}
   <li>
     <small class="datetime muted" data-time="{{ post.date }}">{{ post.date | date_to_string }} </small>
     <a href="{{ post.url }}">{{ post.title }}</a>
